--- a/public/index.html
+++ b/public/index.html
@@ -113,6 +113,7 @@
                 <button id="mode-start" class="mode-button active">Inicio</button>
                 <button id="mode-end" class="mode-button">Final</button>
                 <button id="mode-wall" class="mode-button">Muros</button>
+                <button id="mode-traffic" class="mode-button">Tráfico</button>
                 <button id="mode-clear" class="mode-button">Limpiar</button>
             </div>
             
@@ -138,6 +139,7 @@
             <div><strong>S</strong> - Punto Inicio</div>
             <div><strong>E</strong> - Punto Final</div>
             <div><strong>W</strong> - Muros</div>
+            <div><strong>T</strong> - Tráfico</div>
             <div><strong>C</strong> - Limpiar</div>
             <div><strong>F</strong> - Buscar Camino</div>
             <div><strong>R</strong> - Reset Vista</div>
